--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
 
         <div class="button-wrapper">
           <button class="slideshow-btn btn site-button">
-            <span class="btn-value btn-value-left">READ MORE: Faith and Industry</span>
+            <span class="btn-value btn-value-left">READ MORE: Faith and Industry in Lowell</span>
             <i class="glyphicon glyphicon-th-list btn-icon btn-left" aria-hidden="true"></i>
           </button>
           <!--<a href="#" class="flash-btn">READ MORE: Faith and Industry</a>-->
@@ -1599,15 +1599,26 @@
 
         <article class="section-article">
           <section class="article-title"><h1></h1></section>
-          <section class="article-image">
-            <img src="images/article-image2.jpg" alt="Article Image"/>
-          </section>
           <section class="article-content">
-            <p>Lowell, Massachusetts, and the surrounding cities and towns along the Merrimack River Valley in northern Massachusetts, played an important a role in the growth of the Catholic community.</p>
-            <p>Considered the "cradle of the American Industrial Revolution," Lowell is named after the textile merchant who brought power looms to the area in the 1820's. The construction of dams to harness the river's energy and the proliferation of manufacturing in the area coincided with early waves of immigrant groups seeking work, mostly French Canadian, Irish, and German Catholics. The majority of the textile workforce in particular were women and young girls.</p>
-            <p>As industry grew, the organization of society changed, too. Densely-populated ethnic neighborhoods replaced company-owned boarding houses, and churches became the hearts of their communities for politics and recreation as much as worship.</p>
-            <p>The growth of the church is visible with the increase of parishes in the region during the decades when it was the industrial bedrock of the United States. Victories or setbacks in one area of life had implications in others.</p>
-            <p>Catholics, alongside other laboring immigrant and minority groups, struggled as much for freedom from discrimination as they did for fair pay, overtime, and educational opportunities. In this way, the effort for religious acceptance by a once-outlawed demographic was inextricably linked with the origins of a national movement towards organized labor.</p>
+               <div class="floated-box f-left">
+               <img src="images/Lowell_CompanyMills.png" alt="An 1850 detail of a map by Sidney and Neff featuring the Lowell Company Mills."/>
+               <span class="image-caption-content t-center">An 1850 detail of a map by Sidney and Neff featuring the Lowell Company Mills.</span>
+               </div>
+          <p>Lowell, Massachusetts, and the surrounding cities and towns in the Merrimack Valley in northern Massachusetts played an important a role in the growth of the Catholic community.</p>
+          <p>Considered the "cradle of the American Industrial Revolution," Lowell is named after the textile merchant who brought power looms to the area in the 1820s. The construction of dams to harness the Merrimack River's energy and the proliferation of manufacturing in the area coincided with early waves of immigrant groups seeking work, mostly French Canadian, Irish, and German Catholics. The majority of the textile workforce in particular were women and young girls.</p>
+               <div class="floated-box f-right">
+               <img src="images/Lowell_PortugueseMillGirls.jpg" alt="Three Portuguese mill workers in Lowell, circa 1910-1915. The majority of the textile workforce were women and girls."/>
+               <span class="image-caption-content t-center">Three Portuguese mill workers in Lowell, circa 1910-1915. The majority of the textile workforce were women and girls.</span>
+               </div>
+          <p>As industry grew, the organization of society changed, too. Densely-populated ethnic neighborhoods replaced company-owned boarding houses, and churches became the hearts of their communities for politics and recreation as much as worship.</p>
+               <div class="floated-box f-left">
+               <img src="images/Lowell_MerrimackRiver1900.jpg" alt="A view of the factories along the Merrimack River, around 1900."/>
+               <span class="image-caption-content t-center">A view of the factories along the Merrimack River, around 1900.</span>
+               </div>
+          <p>The growth of the church is visible with the increase of parishes in the region during the decades when it was the industrial bedrock of the United States. After the Civil War, with the expansion of the Merrimack Valley mills and the growth in immigrant worker populations, the number of Catholic parishes tripled in both Lowell and Lawrence, including French-speaking parishes to meet the needs of French-Canadian immigrants.</p>
+          <p>Victories or setbacks in one area of life had implications in others. Catholics, alongside other laboring immigrant and minority groups, struggled as much for freedom from discrimination as they did for fair pay, overtime, and educational opportunities. In this way, the effort for religious acceptance by a once-outlawed demographic was inextricably linked with the origins of a national movement towards organized labor.</p>
+ 
+          
           </section>
         </article>
 
