--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,9 @@
 
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
-        <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery" width="300px" height="300px">
+         <div class="floated-box f-center">
+          <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
+         </div>
         <p>HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</p>
        
         <ul class="resoures-list">
