--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,7 @@
 
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
-         <div class="floated-box f-center">
+         <div class="floated-box f-left">
           <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
          </div>
         <p>HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</p>
