--- a/index.html
+++ b/index.html
@@ -1660,11 +1660,10 @@
 
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
-         <div class="floated-box f-left">
+        <div class="floated-box f-left">
           <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-         </div>
-        <p>HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</p>
-       
+          <span class="image-caption-content t-center">HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</span>
+        </div>
         <ul class="resoures-list">
           <li>History of the Archdiocese of Boston http://www.bostoncatholic.org/About-The-BeArchdiocese/Content.aspx?id=11570</li>
           <li>Lord, Robert H. et al. History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943.</li>
