Fix the structure changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <!-- Home Fixed Text -->
             <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
-            <a href="#introduction" class="" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
+            <a href="#introduction" class="scroll-down-arrow" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
 
           </div>
           <!-- End Home Text Slider -->
@@ -830,37 +830,38 @@
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
                                 <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.png" alt="An 1801 painting of State Street by James Brown Marston."/>
-                              <!-- commented out for lack of second image for this section, add back in if find another one
+                                <!-- commented out for lack of second image for this section, add back in if find another one
+                                </div>
+                                <div class="item">
+                                  <img src="images/timeline-images/timeline-image4.jpg" alt="timeline-image2"/>
+                                </div>
+                                -->  
                               </div>
-                              <div class="item">
-                                <img src="images/timeline-images/timeline-image4.jpg" alt="timeline-image2"/>
-                              </div>
-                              -->  
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#timeline-slider1" data-slide-to="0" class="active"></li>
+                                <li data-target="#timeline-slider1" data-slide-to="1"></li>
+                              </ol>
+                              <!--slider control-->
+                              <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
                             </div>
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                              <li data-target="#timeline-slider1" data-slide-to="0" class="active"></li>
-                              <li data-target="#timeline-slider1" data-slide-to="1"></li>
-                            </ol>
-                            <!--slider control-->
-                            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                              <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                              <span class="sr-only">Next</span>
-                            </a>
                           </div>
-                        </div>
-                        <div class="col">
-                          <p>
-                            Leading Protestant public figures and families, including John Adams, donate generously to the construction of Boston’s first Catholic Church,
-                            which is planned by celebrated architect Charles Bulfinch, who designed Boston’s State House and Washington DC’s capitol.
-                            The Holy Cross Church is dedicated in September 29, 1803 by Bishop Carroll, who has traveled from Baltimore for the occasion.
-                            Bishop Carroll’s visit invigorates the local Catholic community and by 1805, the congregation has grown to 500.
-                            Father Cheverus is appointed Bishop of Boston in 1808, and the Diocese of Boston is officially established.
-                          </p>
+                          <div class="col">
+                            <p>
+                              Leading Protestant public figures and families, including John Adams, donate generously to the construction of Boston’s first Catholic Church,
+                              which is planned by celebrated architect Charles Bulfinch, who designed Boston’s State House and Washington DC’s capitol.
+                              The Holy Cross Church is dedicated in September 29, 1803 by Bishop Carroll, who has traveled from Baltimore for the occasion.
+                              Bishop Carroll’s visit invigorates the local Catholic community and by 1805, the congregation has grown to 500.
+                              Father Cheverus is appointed Bishop of Boston in 1808, and the Diocese of Boston is officially established.
+                            </p>
+                          </div>
                         </div>
                       </div>
                     </div>
