--- a/index.html
+++ b/index.html
@@ -473,12 +473,12 @@
 
         <div id="slideshow-block" class="content-popup row volume-database">
           <h3 class="t-center uppercase">From Dusty Volumes To Databases</h3>
-          <div class="col-lg-6 slideshow-block-content">
+          <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non rutrum risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut eget laoreet magna. Aenean sit amet est a lectus pretium dictum. Sed sodales sit amet purus a vehicula. Donec sagittis posuere egestas. Ut ut venenatis diam.</p>
             <p>Nunc vulputate lobortis lacus quis fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer congue purus a tellus fringilla.</p>
           </div>
 
-          <div class="col-lg-6 slider-column">
+          <div class="col-lg-6 col-sm-6 col-md-6 slider-column">
             <div class="slideshow-wrapper content-popup-wrapper">
               <a href="#" data-toggle="modal" data-target="#myModal">
                 <img src="images/slider-images/slider-image6.jpg" alt="Lowell Bott Mill" />
@@ -651,7 +651,7 @@
         <!--Catholic church block Area-->
 
         <div id="catholic-church-block" class="row cath-church-elments-wrapper">
-          <div id="map-container" class="col-lg-6 map-wrapper">
+          <div id="map-container" class="col-lg-6 col-sm-6 col-md-6 map-wrapper">
             <div id="map"></div>
             <div id="timeline-loader" class="tm-loader">
               <div class="square">
@@ -662,7 +662,7 @@
             </div>
           </div>
 
-          <div id="timeline-content-container" class="col-lg-6 tm-slider-botttom-wrapper">
+          <div id="timeline-content-container" class="col-lg-6 col-sm-6 col-md-6 tm-slider-botttom-wrapper">
 
             <!--- Timeline content 1 start -->
             <div id="parish_1780_1789" class="tm-content-row active content-popup-wrapper">
