Make text changes to sacrament pop ups
Inserted Thomas Lester's version

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">An individual, usually an infant within days of birth, is immersed in water or has water poured over their head. This act symbolized Christ’s burial and resurrection. Records generally include the child’s name, birth and baptism date, parents, sponsors (Godparents), and the officiating priest.</div>
+                              <div class="summary">The word is derived from the Greek <i>baptizein</i>, which means to “plunge” or “immerse.”  The individual being baptized is immersed in water, or has water poured over his/her head, which symbolizes Christ’s burial, and the emergence from the water his resurrection.  By this, the individual is invoked with the Holy Trinity, freed from sin, reborn as one of God’s children, and incorporated into the church, with the expectation that they will lead a life in keeping with the teaching of the gospel.</div>
                             </div>
                           </div>
                         </div>
@@ -230,7 +230,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">As adolescents or young adults, individuals renew the promises of faith from their baptism, and are anointed with a perfumed oil. A bishop is required to consecrate this sacrament unless a priest has been given the authority. Since the ceremony is often performed in a group of individuals, records generally include the date, officiant, and list of recipients.</div>
+                              <div class="summary"><p>When an individual is confirmed a character is imprinted, and he/she is enriched by the gift of the Holy Spirit and bound more closely to the Church.  Confirmation strengthens the baptized and obliges them to more firmly be witnesses of Christ by word and deed, and to spread and defend the faith.</p><p>During the ceremony, each candidate renews his/her baptismal promises and profession of faith.  Each is then anointed with perfumed oil (Chrism) just as Christ was “anointed with the Holy Spirit.”   A bishop is required to consecrate the sacrament, unless a priest has been given the authority.</p></div>
                             </div>
                           </div>
                         </div>
@@ -263,7 +263,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">The eating and drinking of ceremonial bread and wine symbolizes the body and the blood of Jesus Christ, as well as the gifts of God and nature and the works of human hands. These records are generally very brief and include the date, officiating priest, and names of receiving individuals.</div>
+                              <div class="summary"><p>The Eucharistic is the memorial of the death and resurrection of the Lord, and is the source of all worship and Christian life.  “At the heart of the Eucharistic celebration are the bread and wine that, by the words of Christ and the invocation of the Holy Spirit, become Christ’s Body and Blood.”  By consuming it, an individual is spiritually nourished – “the Lord said: ‘He who eats my flesh and drinks my blood abides in me, and I in him.”</p><p>The bread and wine is also meant to signify fruit of the “work of human hands,” and above all “fruit of the earth” and “of the vine” – gifts of the Creator.</p></div>
                             </div>
                           </div>
                         </div>
@@ -296,7 +296,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">At least once per year, individuals confess sins to a legitimate minister, and profess genuine sorrow for them and intention to reform themselves. In this act, they are reconciled with God and the Church. Records may not reflect confessions since they are generally done in confidence with the minister.</div>
+                              <div class="summary"><p>Those who confess their sins to a legitimate minister, are sorry for them, and intend to reform themselves, are pardoned by God and, at the same time, reconciled with the Church which they have wounded by sinning.</p><p>Each individual is required to admit the sins he/she has committed since baptism or last confession; those who have received Confirmation are required to do so at least once per year.</p></div>
                             </div>
                           </div>
                         </div>
@@ -333,7 +333,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">Also known as Last Rites, a priest anoints a dangerously ill individual with oil that has been consecrated by a bishop and prays for their relief and spiritual salvation. There are few records of this sacrament, though those that exist tend to include the name of the individual, the location of the visit, and a brief description of their illness and the sacraments received.</div>
+                              <div class="summary">Also known as Last Rites, this sacrament is administered to those who are dangerously ill, entrusting them to the Lord who will relieve their suffering and save them.  To do so, a priest will anoint the individual with oil consecrated by a bishop and pray for them to receive God’s grace.</div>
                             </div>
                           </div>
                         </div>
@@ -366,7 +366,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">A baptized male and female may willingly enter into marriage through the Church. Unlike civil marriage, Catholic matrimony tends to be a lifelong binding agreement, and entails many responsibilities for the couple. Marriage records generally include the names of the individuals, the date, the names of two witnesses, the officiating priest, and sometimes the couple’s parents, their address, place of origin, and other details.</div>
+                              <div class="summary">The sacrament is conferred when a baptized man and a baptized woman willingly give their consent to “give and accept each other through an irrevocable covenant.” In doing so, the couple agree to a whole life together, and also accept responsibility to care for the education of their offspring.  Its essential properties are unity and indissolubility, which in Christian marriage obtain a special firmness by reason of the sacrament.</div>
                             </div>
                           </div>
                         </div>
@@ -399,7 +399,9 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">This sacrament, usually administered by a bishop, allows a baptized and confirmed male over the age of 25 to serve as a deacon, priest, or bishop. After significant preparation, the individual is entrusted with the spiritual leadership, governing, teaching, and sanctifying of his community.</div>
+                              <div class="summary"><p>“Holy Orders is the sacrament through which the mission entrusted by Christ to his apostles continues to be exercised in the Church…it includes three degrees: episcopate (bishop), presbyterate (priest), and diaconate (deacon).”  Those receiving holy orders are responsible for nourishing the people of God by fulfilling the functions of teaching, sanctifying, and governing.</p><p>Only a baptized male who has been confirmed and is at least 25 years of age can receive the sacrament of Holy Orders.  One generally undergoes a significant amount of preparation, spiritually and otherwise.  
+                                This sacrament is usually administered by a bishop at his Cathedral.</p>
+</div>
                             </div>
                           </div>
                         </div>
@@ -472,7 +474,7 @@
         <!--Slideshow Area-->
 
         <div id="slideshow-block" class="content-popup row volume-database">
-          <h3 class="t-center uppercase">From Dusty Volumes To Databases</h3>
+          <h3 class="t-center uppercase">From Volumes To Databases</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non rutrum risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut eget laoreet magna. Aenean sit amet est a lectus pretium dictum. Sed sodales sit amet purus a vehicula. Donec sagittis posuere egestas. Ut ut venenatis diam.</p>
             <p>Nunc vulputate lobortis lacus quis fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer congue purus a tellus fringilla.</p>
