Add early church record images to HTML

--- a/index.html
+++ b/index.html
@@ -429,27 +429,27 @@
           <div class="container">
             <ul class="row first">
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image1" src="images/gallery-images/gallery-img1.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image1" src="images/gallery-images/HolyCrossVarious1810-1823p261.jpg" class="img-responsive"></div>
                 <div class="text">Consectetur adipiscing elit</div>
               </li>
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image2" src="images/gallery-images/gallery-img2.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image2" src="images/gallery-images/HolyCrossVarious1810-1823p331.jpg" class="img-responsive"></div>
                 <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
               </li>
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image3" src="images/gallery-images/gallery-img3.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image3" src="images/gallery-images/HolyTrinityBaptisms1836-1853p2.jpg" class="img-responsive"></div>
                 <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
               </li>
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image4" src="images/gallery-images/gallery-img4.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image4" src="images/gallery-images/ImmaculateConceptionConfirmations1860-1900p34.jpg" class="img-responsive"></div>
                 <div class="text">Lorem, do eiusmod tempor incid Ut enim ad minim veniam</div>
               </li>
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image5" src="images/gallery-images/gallery-img5.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image5" src="images/gallery-images/OurLadyOfVictoriesMarriages1884-1899p41.jpg" class="img-responsive"></div>
                 <div class="text">Do eiusmod tempor</div>
               </li>
               <li>
-                <div class="imgWrapper"><img alt="Gallery Image6" src="images/gallery-images/gallery-img6.jpg" class="img-responsive"></div>
+                <div class="imgWrapper"><img alt="Gallery Image6" src="images/gallery-images/Providence,RIMission1828-1830p10.jpg" class="img-responsive"></div>
                 <div class="text">Eiusmod tempor enim ad minim veniam</div>
               </li>
             </ul>
