--- a/index.html
+++ b/index.html
@@ -430,27 +430,27 @@
             <ul class="row first">
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image1" src="images/gallery-images/HolyCrossVarious1810-1823p261.jpg" class="img-responsive"></div>
-                <div class="text">Consectetur adipiscing elit</div>
+                <div class="text">This image is from Holy Cross (Boston) Various 1810-1823.  It contains funeral records from 1810 recorded by Jean-Louis Lefebvre de Cheverus and Francis A. Matignon, two important figures in the early Boston Church.</div>
               </li>
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image2" src="images/gallery-images/HolyCrossVarious1810-1823p331.jpg" class="img-responsive"></div>
-                <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                <div class="text">This image from Holy Cross (Boston) Various 1810-1823 records the sacrament of Holy Orders as performed at the Holy Cross parish from 1815-1819.  Like many of the sacramental records, it is written in Latin.  In each of these cases, the sacrament was administered by Jean-Louis Lefebvre de Cheverus, Bishop of Boston.</div>
               </li>
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image3" src="images/gallery-images/HolyTrinityBaptisms1836-1853p2.jpg" class="img-responsive"></div>
-                <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
+                <div class="text">Here are baptisms from Holy Trinity (Boston) Baptisms 1836-1853.  They are written in a German Gothic script.   While the Holy Trinity Church was not built until 1844, German Catholics organized to worship as early as 1836 as these records show.  Baptism records typically contain name, parents’ names, witnesses’ names, and often a birth date.</div>
               </li>
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image4" src="images/gallery-images/ImmaculateConceptionConfirmations1860-1900p34.jpg" class="img-responsive"></div>
-                <div class="text">Lorem, do eiusmod tempor incid Ut enim ad minim veniam</div>
+                <div class="text">This image shows confirmations from Immaculate Conception (Boston) 1860-1900.  Confirmation records often show much less information than other records, containing just the name of the confirmand and the date of the ceremony.</div>
               </li>
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image5" src="images/gallery-images/OurLadyOfVictoriesMarriages1884-1899p41.jpg" class="img-responsive"></div>
-                <div class="text">Do eiusmod tempor</div>
+                <div class="text">This Latin form is very typical of many of the record books.  Here, marriages from Our Lady of Victories (Boston) 1884-1899 are recorded.  This form captures the names of the groom and bride, their parents, and the witnesses to the marriage, as well as the date and the place from which they each come.</div>
               </li>
               <li>
                 <div class="imgWrapper"><img alt="Gallery Image6" src="images/gallery-images/Providence,RIMission1828-1830p10.jpg" class="img-responsive"></div>
-                <div class="text">Eiusmod tempor enim ad minim veniam</div>
+                <div class="text">R.D. Woodley was a missionary priest serving the Catholics of Rhode Island.  This page is from Providence, RI 1828-1830 (Mission) and contains records of baptisms and marriages.  Marriages are denoted by parentheses.</div>
               </li>
             </ul>
           </div>
