--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="home-text-block relative">
 
             <!-- Home Text Slider -->
-            <h1 class="white thin small-type">
+            <h6>
 
               <!-- Home Texts -->
               <span class="rotate">
@@ -112,11 +112,11 @@
               </span>
               <!-- End Home Texts -->
 
-            </h1>
+            </h6>
             <!-- End Home Text Slider -->
 
             <!-- Home Fixed Text -->
-            <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
+            <h1 class="white thin small-type">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</h1>
             <a href="#introduction" class="scroll-down-arrow" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
 
           </div>
@@ -144,8 +144,8 @@
           In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, eager to help American Catholics any way he could. He wrote to John Carroll, Bishop of the New England Church, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
         </p>
         <div class="floated-box f-left">
-          <img src="images/article-image3.jpg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
-          <span class="image-caption-content t-center">Jean-Louis Anne Madelain Lefebvre de Cheverus, as Bishop Cheverus. Painting by Gilbert Stuart, 1823. Museum of Fine Arts, Boston.</span>
+          <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
+          <span class="image-caption-content t-center">Ready to start browsing? <a href="#" target="new">Search our database at AmericanAncestors.org</a>.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
@@ -156,6 +156,10 @@
         <p>
           While in England, Cheverus received a letter from his former professor Francis Matignon, now a Boston pastor, who vividly described the town's desperate need for Catholic benevolence.  If only you were here, lamented Matignon, you could do so much good work.
         </p>
+          <div class="floated-box f-right">
+          <img src="images/article-image3.jpg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
+          <span class="image-caption-content t-center">Jean-Louis Anne Madelain Lefebvre de Cheverus, as Bishop Cheverus. Painting by Gilbert Stuart, 1823. Museum of Fine Arts, Boston.</span>
+        </div>
         <p>
           Boston would present a new set of obstacles for Cheverus. Practicing Catholicism had only been legal in Massachusetts for 17 years, and many members of the majority-Protestant population were deeply suspicious of their "Popish" neighbors.
         </p>
@@ -649,7 +653,7 @@
 
         <!-- Header -->
         <h1 class="header section-title">TIMELINE OF THE EARLY CHURCH IN GREATER BOSTON</h1>
-        <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">Drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Zoom in on the map and click each gold pointer on the map to see more aboutindividual parishes. Explore the slideshow to see more detail about key moments in the history of the Boston Catholic community.</p>
+        <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">Drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Zoom in on the map and click each gold pointer to see more about individual parishes. Explore the slideshow to see more detail about key moments in the history of the Boston Catholic community.</p>
         <!--Catholic church block Area-->
 
         <div id="catholic-church-block" class="row cath-church-elments-wrapper">
@@ -1663,10 +1667,7 @@
 
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
-        <div class="floated-box f-left">
-          <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-          <span class="image-caption-content t-center">HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</span>
-        </div>
+
         <ul class="resoures-list">
           <li>History of the Archdiocese of Boston http://www.bostoncatholic.org/About-The-BeArchdiocese/Content.aspx?id=11570</li>
           <li>Lord, Robert H. et al. History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943.</li>
