--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
           <div class="home-text-block relative">
 
             <!-- Home Text Slider -->
-            <h6>
+            <h1 class="white thin large-type">
 
               <!-- Home Texts -->
               <span class="rotate">
-                ARTICLES <br/> OF FAITH
+                <b>ARTICLES <br/> OF FAITH</b>
               </span>
               <!-- End Home Texts -->
 
-            </h6>
+            </h1>
             <!-- End Home Text Slider -->
 
             <!-- Home Fixed Text -->
