--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </p>
         <div class="floated-box f-left">
           <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-          <span class="image-caption-content t-center">Ready to start browsing? <a href="#" target="new">Search our database at AmericanAncestors.org</a>.</span>
+          <span class="image-caption-content t-center">Ready to start browsing? Search our database at AmericanAncestors.org.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
