--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="home-text-block relative">
 
             <!-- Home Text Slider -->
-            <h1 class="white thin large-type">
+            <h1 class="white thin small-type">
 
               <!-- Home Texts -->
               <span class="rotate">
