--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- End Home Text Slider -->
 
             <!-- Home Fixed Text -->
-            <h1 class="white thin small-type">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</h1>
+            <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
             <a href="#introduction" class="scroll-down-arrow" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
 
           </div>
@@ -145,7 +145,7 @@
         </p>
         <div class="floated-box f-left">
           <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-          <span class="image-caption-content t-center">Ready to start browsing? Search our database at AmericanAncestors.org.</span>
+          <span class="image-caption-content t-center"><a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Ready to start browsing?</a></span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
