Change main text in volume slideshow

--- a/index.html
+++ b/index.html
@@ -480,14 +480,14 @@
         <div id="slideshow-block" class="content-popup row volume-database">
           <h3 class="t-center uppercase">From Old Books to Browsable Images</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non rutrum risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut eget laoreet magna. Aenean sit amet est a lectus pretium dictum. Sed sodales sit amet purus a vehicula. Donec sagittis posuere egestas. Ut ut venenatis diam.</p>
-            <p>Nunc vulputate lobortis lacus quis fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer congue purus a tellus fringilla.</p>
+            <p>The Archdiocese of Boston and NEHGS are in a partnership to create searchable databases out of records from over 100 parishes dating between 1789 and 1900. The project will take several years to complete, but while our transcribers work to make that possible, the scanned images of these volumes are available now in a browseable format for members and guests alike.</p>
+            <p>Due to the large number of records in this collection, researchers will have the most luck finding records of interest if they know the parish, rough years, and type of sacramental record for which they are searching. </p>
           </div>
 
           <div class="col-lg-6 col-sm-6 col-md-6 slider-column">
             <div class="slideshow-wrapper content-popup-wrapper">
               <a href="#" data-toggle="modal" data-target="#myModal">
-                <img src="images/slider-images/volumeslideshow1.jpg" alt="Getting the Books" />
+                <img src="images/slider-images/volumeslideshow1.jpg" alt="Getting the Books"/>
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
